objects/B2B_Mood_Board__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>B2B_Mood_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mood_Board_Data__c</fullName>
        <label>Moodboard Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mood_Board_Name__c</fullName>
        <label>Moodboard Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>B2B Moodboard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mood_Board_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Moodboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>